Update: fixed div break on homepage, js for grabbing blog index

--- a/custom/themes/ingenuity/src/sass/layout/_grid-settings.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_grid-settings.scss
@@ -14,7 +14,7 @@ $bp-med: new-breakpoint(max-width 49em 12);
 $bp-small: new-breakpoint(max-width 30em 5);
 
 // Visual Grid view
-$visual-grid: false;
+$visual-grid: true;
 $visual-grid-color: #000;
 $visual-grid-index: front;
 $visual-grid-opacity: 0.2;
